# copilot-agent-training

./: README.md
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/auth/: jwt_handler.py
backend/app/routes/: auth.py
backend/tests/: test_auth.py
frontend/: README.md  angular.json  package-lock.json  proxy.conf.json
frontend/src/: index.html  styles.css
frontend/src/app/: app-routing.module.ts  app.component.css  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/pages/login/: login.component.css  login.component.html  login.component.ts
frontend/src/app/pages/welcome/: welcome.component.css  welcome.component.html  welcome.component.ts
frontend/src/app/services/: auth.service.ts
